Bug 124975 - Modifying chart data range with mouse selection doesn't update range
Summary: Modifying chart data range with mouse selection doesn't update range
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart-Data
  Show dependency treegraph
 
Reported: 2019-04-26 08:11 UTC by Aron Budea
Modified: 2019-05-03 15:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast from LibreOffice 6.3 master (852.70 KB, video/mp4)
2019-04-29 19:51 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-04-26 08:11:13 UTC
- With a single cell selected in an empty spreadsheet, insert a chart (which will also be empty).
- Inside the new chart, click Data Ranges on the toolbar.
- Use Select data range to specify a new range.

=> Range isn't updated.

Observed using LO 6.3.0.0.alpha0+ (26e85974a0287ab5869e7ff0145a66b853d66a02) / Windows 7.
No issue in 6.2.0.3.
=> regression

First this started crashing after the following commits (different kinds of crashes):
https://cgit.freedesktop.org/libreoffice/core/commit/?id=3d648f76ac90fe8e28691313d0d4e78a8278e511
https://cgit.freedesktop.org/libreoffice/core/commit/?id=8d19e03b17fdd6e6159843249fe0b4f41c526f17

Finally, after the following commit it doesn't crash anymore, but the range isn't updated after selecting a new one. Adding Cc: to Caolán McNamara, please take a look.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=9030ffb1a1b282eb2c6d1773930b0de0d42df447
author		Caolán McNamara <caolanm@redhat.com>	2019-04-13 14:20:23 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-04-13 18:02:14 +0200

Resolves: tdf#124693 Crash modifying chart data range with mouse selection
Comment 1 Commit Notification 2019-04-27 18:18:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/3ffb0373695a7b3a7f8cab8f2b8bf259c4300a7e%5E%21

Resolves: tdf#124975 toggle parent input blocked only in set_modal

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Xisco Faulí 2019-04-29 19:51:29 UTC
Created attachment 151075 [details]
screencast from LibreOffice 6.3 master
Comment 3 Xisco Faulí 2019-04-29 19:52:20 UTC
Hello Caolán,
I still can reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: 101eea01c778ad255d3c8467e06643b23ff6bd76
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

see attached screencast
Comment 4 Caolán McNamara 2019-04-30 08:23:34 UTC
ah, I misunderstood the problem
Comment 5 Caolán McNamara 2019-04-30 09:24:03 UTC
when the selection is changed, calc sets the area as the clipboard contents, seeing as the clipboard isn't tracking the gtkentry, gtk clears the gtkentry selection, so it not longer matches what was originally selected there
Comment 6 Commit Notification 2019-04-30 11:53:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/f2466b915cbf7bee03df16d0972f06155b7512de%5E%21

tdf#124975 changing the clipboard selection clears the widget selection

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-05-03 15:04:53 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: f20810f7829d9f3b7167df316e1303810b746366
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!