Resolves: tdf#124975 toggle parent input blocked only in set_modal

since...

commit e54762baa8019d02cadd311e750f6ff0d276f67b
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Apr 16 17:17:58 2019 +0100

    weld ScTPValidationValue and ScValidationDlg

the inc/dev modality on show/hide isn't desirable anymore

Change-Id: I5bf908871986160de61508c9678495d0d5a8296d